src/test/deca/context/invalid/testRead.deca
//ERROR :3:
{
    int a = readFloat();
}